test/src/e2e_vm_tests/test_programs/should_fail/multiple_config_blocks_one_lib/src/main.sw
script;

dep lib;
use lib::*;

configurable {
    Y: u64 = 42,
}

fn main() -> (u64, u64){
    (X, Y)
}
